feat: component card, form, input, navbar, searchbar and edit homepage

--- a/client/notetify-app/src/index.css
+++ b/client/notetify-app/src/index.css
@@ -27,4 +27,8 @@
   .icon-btn {
     @apply text-xl text-slate-400 cursor-pointer hover:text-black;
   }
+
+  .input-label {
+    @apply text-xs text-black font-bold;
+  }
 }
